# caduceus

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
aidlc-docs/: aidlc-state.md
aidlc-rules/: core-workflow.md
caduceus/: __init__.py  daemon.py
caduceus/cli/: bootstrap.py  chat.py  client.py  context.py  errors.py  main.py  output.py  serve_cmd.py  sse.py  tail.py
caduceus/control/: __init__.py  agent_proxy.py  api.py  auth.py  events.py  jobs.py  lifecycle.py  observability.py  prober.py  provisioner.py  reconciler.py
caduceus/core/: __init__.py  config.py  errors.py  hermes_adapter.py  ports.py  process_manager.py  registry.py  render.py  tokens.py  types.py  workspace.py
caduceus/proxy/: __init__.py  routes.py  service.py  traffic.py  upstream.py
caduceus/web_dist/: index.html
tests/e2e_support/: fake_daemon.py
tests/integration/: test_cli_daemon_e2e.py  test_cli_real_daemon.py  test_daemon_asgi.py  test_daemon_real_hermes.py  test_hermes_real.py
tests/property/: strategies.py  test_agent_proxy_properties.py  test_backoff_properties.py  test_cli_chat_properties.py  test_cli_errors_properties.py  test_cli_output_properties.py  test_cli_stream_properties.py  test_cli_surface_properties.py  test_events_traffic_properties.py  test_jobs_properties.py  test_observability_properties.py  test_reap_gateway_properties.py  test_reconciler_snapshot_properties.py  test_registry_properties.py  test_render_properties.py  (+4 more)
web/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/src/: App.tsx  (+2 more)
(+267 files in other folders)
